5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3986/executions/1573_1331.log
== TEST (2019-03-15 19:35:58) 
-- CODE:
m=input("quantidade de moedas")
g=input("quantidade de guerreiros")
print(m // g)
print(m % g)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    g=input()
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-15 19:36:24) 
-- CODE:
m=input("quantidade de moedas: ")
g=input("quantidade de guerreiros: ")
print(m// g)
print(m % g)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    g=input()
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-15 19:37:20) 
-- CODE:
m=input("quantidade de moedas: ")
g=input("quantidade de guerreiros: ")
x=m//g
y=m%g
print(x)
print(y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    g=input()
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-15 19:37:37) 
-- CODE:
m=input("quantidade de moedas: ")
g=input("quantidade de guerreiros: ")
x=m//g
y=m%g
print(x)
print(y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    g=input()
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-15 19:37:59) 
-- CODE:
m=input("quantidade de moedas: ")
g=input("quantidade de guerreiros: ")
x=(m//g)
y=(m%g)
print(x)
print(y)
-- EXECUTION TIME:
0.149172
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1573/1331/main.py", line 2, in <module>
    g=input()
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-15 19:38:00) 
-- CODE:
m=input("quantidade de moedas: ")
g=input("quantidade de guerreiros: ")
x=(m//g)
y=(m%g)
print(x)
print(y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    g=input()
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-15 19:38:29) 
-- CODE:
m=input("quantidade de moedas: ")
g=input("quantidade de guerreiros: ")
x=(m // g)
y=(m % g)
print(x)
print(y)
-- EXECUTION TIME:
0.132427
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1573/1331/main.py", line 2, in <module>
    g=input()
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-15 19:38:31) 
-- CODE:
m=input("quantidade de moedas: ")
g=input("quantidade de guerreiros: ")
x=(m // g)
y=(m % g)
print(x)
print(y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    g=input()
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-15 19:39:46) 
-- CODE:
fron math import
m=input("quantidade de moedas: ")
g=input("quantidade de guerreiros: ")
x=(m // g)
y=(m % g)
print(x)
print(y)
-- EXECUTION TIME:
0.143632
-- ERROR:
  File "/home/codebench/codes/1573/1331/main.py", line 1
    fron math import
            ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-15 19:39:47) 
-- CODE:
fron math import
m=input("quantidade de moedas: ")
g=input("quantidade de guerreiros: ")
x=(m // g)
y=(m % g)
print(x)
print(y)
-- ERROR:
File "XXXX", line 1
    fron math import
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-15 19:39:49) 
-- CODE:
fron math import
m=input("quantidade de moedas: ")
g=input("quantidade de guerreiros: ")
x=(m // g)
y=(m % g)
print(x)
print(y)
-- EXECUTION TIME:
0.192495
-- ERROR:
  File "/home/codebench/codes/1573/1331/main.py", line 1
    fron math import
            ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-15 19:40:04) 
-- CODE:
m=input("quantidade de moedas: ")
g=input("quantidade de guerreiros: ")
x=(m // g)
y=(m % g)
print(x)
print(y)
-- EXECUTION TIME:
0.193551
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1573/1331/main.py", line 2, in <module>
    g=input()
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-15 19:40:06) 
-- CODE:
m=input("quantidade de moedas: ")
g=input("quantidade de guerreiros: ")
x=(m // g)
y=(m % g)
print(x)
print(y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    g=input()
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-15 19:40:24) 
-- CODE:
m=input("quantidade de moedas: ")
g=input("quantidade de guerreiros: ")

y=(m % g)

print(y)
-- EXECUTION TIME:
0.128165
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1573/1331/main.py", line 2, in <module>
    g=input()
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-15 19:40:25) 
-- CODE:
m=input("quantidade de moedas: ")
g=input("quantidade de guerreiros: ")

y=(m % g)

print(y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    g=input()
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-15 19:41:16) 
-- CODE:
m=input("quantidade de moedas: ")
g=input("quantidade de guerreiros: ")
x=(m//g)
y=(m % g)

print(y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    g=input()
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-15 19:41:36) 
-- CODE:
m=input("quantidade de moedas: ")
g=input("quantidade de guerreiros: ")
x= (m//g)
y= (m % g)
print(x)
print(y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    g=input()
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-15 19:50:17) 
-- CODE:
m=input("quantidade de moedas: ")
g=input("quantidade de guerreiros: ")
x= m//g
y= m % g
print(x)
print(y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    g=input()
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-15 19:50:18) 
-- CODE:
m=input("quantidade de moedas: ")
g=input("quantidade de guerreiros: ")
x= m//g
y= m % g
print(x)
print(y)
-- EXECUTION TIME:
0.189282
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1573/1331/main.py", line 2, in <module>
    g=input()
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-15 19:51:17) 
-- CODE:
m=50
g=3
x= m//g
y= m % g
print(x)
print(y)
-- EXECUTION TIME:
0.206655
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
16
2
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
